storage/rook-ceph/operator/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rook-c-route
  namespace: rook-ceph-cold-cluster
spec:
  parentRefs:
    - name: rook-gateway
      sectionName: https-rook-c
  hostnames:
    - rook-c.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          namespace: rook-ceph-cold-cluster

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rook-h-route
  namespace: rook-ceph-hot-cluster
spec:
  parentRefs:
    - name: rook-gateway
      sectionName: https-rook-h
  hostnames:
    - rook-h.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          namespace: rook-ceph-hot-cluster
